Fixed SyntaxAnalyzer